# binary-search

./: Cargo.toml  README.md
proptest-regressions/: lib.txt
src/: lib.rs
