[package]
name = "binary-search"
version = "0.4.0"
authors = ["Daniel Waterworth <me@danielwaterworth.com>"]
edition = "2024"
license = "MIT"
description = "Generic binary search implementation"
readme = "README.md"
repository = "https://github.com/danielwaterworth/binary-search"

[dependencies]

[dev-dependencies]
proptest = { version = "1.7" }